--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ go.work.sum
 # env file
 .env
 
+# Build artifacts
+main
+dagger-ci
+ci/dagger-ci
+
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+*.swp
+.DS_Store
